--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,20 @@
     	<artifactId>httpclient</artifactId>
     	<version>4.5.13</version> <!-- o la versione più recente -->
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+	<dependency>
+    	<groupId>com.googlecode.json-simple</groupId>
+    	<artifactId>json-simple</artifactId>
+    	<version>1.1.1</version>
+	</dependency>
 
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+ 	<dependency>           
+   		<groupId>org.json</groupId>
+   		<artifactId>json</artifactId>
+   		<version>20201115</version>
+ 	</dependency>
     
   </dependencies>
 </project>
